package c22dlink;

option java_multiple_files = true;

message FrameImage {
	enum Type {
		ORIGINAL = 1;
		CLASSIFY = 2;
	}

	required int32 sequence = 1;
	required Type type = 5 [default = ORIGINAL];

	required int32 width = 2;
	required int32 height = 3;

	required bytes image = 4;
}
